# sample-prediction-pipeline

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  Snakefile  config.yaml  pyproject.toml  setup.py
data/example/: example_data.h5ad
docs/: usage.md
envs/: sample_prediction_pipeline.yaml
params/example_task/: gex_nn.tsv  multimil.tsv  multimil_reg.tsv  pb_rf.tsv
params/recommended_params/: ct_pb_nn.tsv  gex_nn.tsv  multimil.tsv  multimil_reg.tsv  pb_mr.tsv
scripts/: ct_pb_mr.py  ct_pb_nn.py  ct_pb_rf.py  find_best.py  freq_mr.py  freq_nn.py  freq_rf.py  gex_mr.py  gex_nn.py  gex_rf.py  pb_mr.py  pb_nn.py  pb_rf.py  run_method.py  run_multimil.py  save_anndata.py  utils.py
